Dialog: implement wrapper to fix blurriness

--- a/coral-component-dialog/src/styles/index.styl
+++ b/coral-component-dialog/src/styles/index.styl
@@ -41,6 +41,11 @@ coral-dialog-footer {
   }
 }
 
+// @compat
+._coral-Dialog-wrapper {
+  outline: none;
+}
+
 ._coral-Dialog-dragIcon {
   margin-top: 3px;
 }
